<resources>
    <string name="app_name">ガベッシュバスターズ</string>
    <!-- 左のメニュー用 -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="left_nav_title">メニュー</string>
    <string name="left_nav_mypage">マイページ</string>
    <string name="left_nav_project_search">プロジェクト検索</string>
    <string name="left_nav_project_contribution">プロジェクト投稿</string>
    <string name="left_nav_join_project">参加プロジェクト</string>
    <string name="left_nav_contact">お問い合わせ</string>
    <!--MYPAGE画面-->
    <string-array name="list">
        <item>全て</item>
        <item>MY投稿</item>
        <item>MY協賛</item>
    </string-array>
    <string name="tv_mypage_title">会員情報</string>
    <string name="bt_mypage_change">変更</string>
    <string name="bt_mypage_update">変更完了</string>
    <string name="tv_mypage_name">氏名</string>
    <string name="tv_mypage_birth">生年月日</string>
    <string name="tv_mypage_address">住所</string>
    <string name="tv_mypage_sex">性別</string>
    <string name="radio_male">男</string>
    <string name="radio_female">女</string>
    <string name="tv_mypage_mail">メールアドレス</string>
    <string name="tv_mypage_phone">電話番号</string>
    <string name="tv_mypage_info">清掃情報</string>
    <string name="tv_mypage_assist">MY協賛</string>
    <string name="tv_mypage_post">MY投稿</string>
    <!--プロジェクト検索画面-->
    <string-array name="spinner_activity_project_search_DetailedDesignatedSearch">
        <item>全てのプロジェクトを表示</item>
        <item>完了プロジェクトを表示</item>
    </string-array>
    <string name="tv_activity_project_search_SearchInfo">検索</string>
    <string name="bt_surrounding_project">この周辺のプロジェクトを検索</string>
    <!--プロジェクト詳細、協賛画面-->
    <string name="tv_project_detail_activity_yen">円</string>
    <string name="activity_project_detail_activity_title">タイトル :</string>
    <string name="tv_project_detail_activity_fundRaising">現在 :</string>
    <string name="tv_project_detail_activity_place">場所 :</string>
    <string name="tv_project_detail_activity_content">内容 :</string>
    <string name="tv_project_detail_activity_oder_date">依頼日 :</string>
    <string name="bt_project_detail_activity_fundRaising">協賛</string>
    <string name="bt_close">閉じる</string>
    <string name="bt_comp_img">清掃完了後の写真を表示</string>
    <string-array name="project_detail_activity_Place">
        <item>100</item>
        <item>200</item>
        <item>300</item>
    </string-array>

    <string name="bt_donation">協賛</string>
    <string name="tv_message_donation">協賛金額を入力してください</string>
    <string name="tv_set_donation">協賛金額</string>
    <string name="tv_target_money">目標金額</string>
    <string name="check_message">下記内容で協賛しますか？</string>
    <string name="tv_gratitude">ありがとうございました</string>

    <!--新規プロジェクト投稿確認画面-->
    <string name="tv_activity_new_project_posts_confirmation_title">タイトル</string>
    <string name="tv_activity_new_project_posts_confirmation_photo">写真</string>
    <string name="tv_activity_new_project_posts_confirmation_place">場所</string>
    <string name="tv_activity_new_project_posts_confirmation_category">カテゴリー</string>
    <string name="tv_activity_new_project_posts_confirmation_content">内容</string>
    <string name="tv_activity_new_project_posts_confirmation_investmentAmount">投資金額</string>
    <string name="tv_activity_new_project_posts_confirmation_postbutton">投資完了</string>
    <!--新規プロジェクト投稿画面-->
    <string name="tv_activity_new_project_posts_title">タイトル</string>
    <string name="tv_activity_new_project_posts_photo">写真</string>
    <string name="tv_activity_new_project_posts_post">投稿</string>
    <string name="tv_activity_new_project_posts_place">場所</string>
    <string name="tv_activity_new_project_posts_category">カテゴリー</string>
    <string name="tv_activity_new_project_posts_content">内容</string>
    <string name="tv_activity_new_project_posts_investmentAmount">投資金額</string>
    <string-array name="spinner_activity_new_project_posts_category">
        <item>選択してください</item>
        <item>汚れ</item>
        <item>ごみ</item>
    </string-array>
    <!--お問い合わせ画面-->
    <string name="tv_contact_title">お問い合わせ</string>
    <string name="tv_contact_item">カテゴリー</string>

    <string name="tv_contact_content">内容</string>
    <string name="bt_contact_confirming">確認</string>
    <string name="bt_contact_send">送信</string>
    <string name="bt_contact_correction">訂正</string>

    <string name="tv_contact_name">お名前</string>

    <string name="tv_contact_result">以下の内容で送信します。</string>

    <!--ログイン画面-->
    <string name="tv_login_id">メールアドレス</string>
    <string name="tv_login_password">パスワード</string>
    <string name="tv_login_button">ログイン</string>
    <string name="tv_login_infomation">アカウントをお持ちでない方はこちら</string>
    <string name="tv_login_new_registration">新規登録</string>
    <string name="login_msg_items"></string>
    <!--新規登録画面-->
    <string name="tv_title_registration">アカウント登録</string>
    <string name="tv_new_registration_name">氏名</string>
    <string name="tv_new_registration_birthday">生年月日</string>
    <string name="tv_new_registration_address">住所</string>
    <string name="tv_new_registration_sex">性別</string>
    <string name="tv_new_registration_men">男</string>
    <string name="tv_new_registration_women">女</string>
    <string name="tv_new_registration_mail">メールアドレス</string>
    <string name="tv_new_registration_password">パスワード</string>
    <string name="tv_new_registration_credit_card_number">クレジットカード番号</string>
    <string name="tv_new_registration_credit_card_security_code">セキュリティ番号</string>
    <string name="tv_new_registration_credit_card_expiration_date">有効期限</string>
    <string name="tv_new_registration_phone_number">電話番号</string>
    <string name="tv_new_registration">登録する</string>
    <string name="msg_items">未入力の項目があります。</string>

    <string name="activity_project_detail_activity_first_rank">一段階目</string>
    <string name="activity_project_detail_activity_second_rank">二段階目</string>

    <!--全体使用可能なもの-->
    <string name="tv_yen">円</string>

    <!-- ロード画面 -->
    <string name="progress_message">ロード中...</string>
</resources>

