<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mypage"
            android:title="@string/left_nav_mypage" />
        <item
            android:id="@+id/nav_join_project"
            android:title="@string/left_nav_join_project" />
        <item
            android:id="@+id/nav_project_search"
            android:title="@string/left_nav_project_search" />
        <item
            android:id="@+id/nav_project_contribution"
            android:title="@string/left_nav_project_contribution" />
        <item
            android:id="@+id/nav_contact"
            android:title="@string/left_nav_contact" />
    </group>

    <item tools:ignore="MenuTitle">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="ログアウト" />
        </menu>
    </item>

</menu>
