<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


 <!--       tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="0dp">
-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/tv_title_registration"
                android:textSize="25sp" />
        </LinearLayout>
    <ScrollView
        android:id="@+id/ScrollView"
        android:fillViewport="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_new_registration_name"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/input_name"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:text="@string/tv_new_registration_birthday"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="230dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/input_birthday"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content" />


                <Button
                    android:id="@+id/button"
                    android:layout_width="45dp"
                    android:layout_height="32dp"
                    android:onClick="onUpdateButtonClick"
                    android:text="選択"
                    android:textSize="10sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_new_registration_address"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/input_address"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:inputType="text" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_new_registration_phone_number"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/input_phone_number"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="11" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_new_registration_sex"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/RadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/bt_men"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/tv_new_registration_men" />


                <RadioButton
                    android:id="@+id/bt_women"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_new_registration_women" />

            </RadioGroup>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_new_registration_credit_card_number"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="230dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_credit_card_number"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="16" />


                <EditText
                    android:id="@+id/input_credit_card_security_code"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3" />

            </LinearLayout>


            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_new_registration_credit_card_expiration_date"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="230dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_credit_card_expiration_year"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="年"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/input_credit_card_expiration_month"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="月"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_new_registration_password"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/input_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_new_registration_mail"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/Registration"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:onClick="onRegistration"
                    android:text="@string/tv_new_registration" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
