<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/check_message"
        android:textSize="24sp"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_set_donation"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/etDonation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_gravity="center"/>
    </LinearLayout>
    <Button
        android:id="@+id/etAgree"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/bt_donation"
        android:textSize="24sp"
        android:layout_gravity="center"/>
</LinearLayout>