<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvMessageDonation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_message_donation"
        android:textSize="24sp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvTargetMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_target_money"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/tvTargetMoneyInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:textSize="24sp"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvDonationMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_donation_money"
            android:textSize="24sp"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:entries="@array/project_detail_activity_Place"/>

        <TextView
            android:id="@+id/tv_yean"
            android:layout_width="54dp"
            android:layout_height="33dp"
            android:text="@string/tv_project_detail_activity_yen"/>
    </LinearLayout>
    <Button
        android:id="@+id/btCheckButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/bt_donation"
        android:textSize="24sp"/>

</LinearLayout>